--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
 project(example-server)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++11")
-
+set(CMAKE_INSTALL_PREFIX=/usr/local)
 find_package(Threads REQUIRED)
-find_package(LibWebRTC REQUIRED)
+find_package(libwebrtc REQUIRED)
 include(${LIBWEBRTC_USE_FILE})
 
 include_directories("src/")
